; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_sca3000_core.c___sca3000_unlock_reg_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_sca3000_core.c___sca3000_unlock_reg_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sca3000_state = type { i32*, i32 }
%struct.spi_message = type { i32 }
%struct.spi_transfer = type { i32, i32, i32, i32* }

@SCA3000_REG_ADDR_UNLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sca3000_state*)* @__sca3000_unlock_reg_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__sca3000_unlock_reg_lock(%struct.sca3000_state* %0) #0 {
  %2 = alloca %struct.sca3000_state*, align 8
  %3 = alloca %struct.spi_message, align 4
  %4 = alloca [3 x %struct.spi_transfer], align 16
  store %struct.sca3000_state* %0, %struct.sca3000_state** %2, align 8
  %5 = getelementptr inbounds [3 x %struct.spi_transfer], [3 x %struct.spi_transfer]* %4, i64 0, i64 0
  %6 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 0
  store i32 8, i32* %6, align 8
  %7 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 1
  store i32 2, i32* %7, align 4
  %8 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 2
  store i32 1, i32* %8, align 8
  %9 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 3
  %10 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %11 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  store i32* %12, i32** %9, align 8
  %13 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i64 1
  %14 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %13, i32 0, i32 0
  store i32 8, i32* %14, align 8
  %15 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %13, i32 0, i32 1
  store i32 2, i32* %15, align 4
  %16 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %13, i32 0, i32 2
  store i32 1, i32* %16, align 8
  %17 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %13, i32 0, i32 3
  %18 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %19 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 2
  store i32* %21, i32** %17, align 8
  %22 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %13, i64 1
  %23 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %22, i32 0, i32 0
  store i32 8, i32* %23, align 8
  %24 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %22, i32 0, i32 1
  store i32 2, i32* %24, align 4
  %25 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %22, i32 0, i32 2
  store i32 1, i32* %25, align 8
  %26 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %22, i32 0, i32 3
  %27 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %28 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 4
  store i32* %30, i32** %26, align 8
  %31 = load i32, i32* @SCA3000_REG_ADDR_UNLOCK, align 4
  %32 = call i8* @SCA3000_WRITE_REG(i32 %31)
  %33 = ptrtoint i8* %32 to i32
  %34 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %35 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %34, i32 0, i32 0
  %36 = load i32*, i32** %35, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 0
  store i32 %33, i32* %37, align 4
  %38 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %39 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  store i32 0, i32* %41, align 4
  %42 = load i32, i32* @SCA3000_REG_ADDR_UNLOCK, align 4
  %43 = call i8* @SCA3000_WRITE_REG(i32 %42)
  %44 = ptrtoint i8* %43 to i32
  %45 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %46 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %45, i32 0, i32 0
  %47 = load i32*, i32** %46, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 2
  store i32 %44, i32* %48, align 4
  %49 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %50 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = getelementptr inbounds i32, i32* %51, i64 3
  store i32 80, i32* %52, align 4
  %53 = load i32, i32* @SCA3000_REG_ADDR_UNLOCK, align 4
  %54 = call i8* @SCA3000_WRITE_REG(i32 %53)
  %55 = ptrtoint i8* %54 to i32
  %56 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %57 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = getelementptr inbounds i32, i32* %58, i64 4
  store i32 %55, i32* %59, align 4
  %60 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %61 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %60, i32 0, i32 0
  %62 = load i32*, i32** %61, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 5
  store i32 160, i32* %63, align 4
  %64 = call i32 @spi_message_init(%struct.spi_message* %3)
  %65 = getelementptr inbounds [3 x %struct.spi_transfer], [3 x %struct.spi_transfer]* %4, i64 0, i64 0
  %66 = call i32 @spi_message_add_tail(%struct.spi_transfer* %65, %struct.spi_message* %3)
  %67 = getelementptr inbounds [3 x %struct.spi_transfer], [3 x %struct.spi_transfer]* %4, i64 0, i64 1
  %68 = call i32 @spi_message_add_tail(%struct.spi_transfer* %67, %struct.spi_message* %3)
  %69 = getelementptr inbounds [3 x %struct.spi_transfer], [3 x %struct.spi_transfer]* %4, i64 0, i64 2
  %70 = call i32 @spi_message_add_tail(%struct.spi_transfer* %69, %struct.spi_message* %3)
  %71 = load %struct.sca3000_state*, %struct.sca3000_state** %2, align 8
  %72 = getelementptr inbounds %struct.sca3000_state, %struct.sca3000_state* %71, i32 0, i32 1
  %73 = load i32, i32* %72, align 8
  %74 = call i32 @spi_sync(i32 %73, %struct.spi_message* %3)
  ret i32 %74
}

declare dso_local i8* @SCA3000_WRITE_REG(i32) #1

declare dso_local i32 @spi_message_init(%struct.spi_message*) #1

declare dso_local i32 @spi_message_add_tail(%struct.spi_transfer*, %struct.spi_message*) #1

declare dso_local i32 @spi_sync(i32, %struct.spi_message*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
